--- a/sites/tb.pro/includes/base/footer.html
+++ b/sites/tb.pro/includes/base/footer.html
@@ -1,33 +1,16 @@
+{# tb.pro footer includes tb.pro and mozilla footer blocks #}
 <footer id="tb-footer">
-  <div id="site-nav">
-    <a id="nav-link-home" href="#">
+  <div id="site-nav" class="primary-block">
+    <a id="nav-link-home" href="{{ url('tbpro.home') }}">
       {{ svg('tbpro/logo-tbpro') }}
     </a>
     <div class="site-nav-links">
-      <a href="#">Home</a>
-      <a href="#">Thundermail</a>
-      <a href="#">Appointment</a>
-      <a href="#">Send</a>
-    </div>
-  </div>
-  <div id="moz-nav">
-    <a id="moz-link-home" href="#">
-      {{ svg('mozilla-lockup-white-rgb') }}
-    </a>
-    <div class="moz-nav-links">
-      <a href="#">Privacy Policy</a>
-      <a href="#">Cookies</a>
-      <a href="#">Legal</a>
-      <a href="#">Send DMCA Notice</a>
-      <a href="#">Report Fraud</a>
-      <a href="#">Participation Guidelines</a>
-    </div>
-    <div id="tb-legal">
-      <p>Thunderbird is part of MZLA Technologies Corporation, a wholly owned subsidiary of Mozilla Foundation. Portions of this content are &copy;1998–{{ current_year }} by individual contributors. Content available under a Creative Commons license.</p>
-      <p>
-        <a href="#">Contribute to this site</a>
-      </p>
+      <a href="{{ url('tbpro.home') }}">Home</a>
+      <a href="{{ url('tbpro.thundermail') }}">Thundermail</a>
+      <a href="{{ url('tbpro.appointment') }}">Appointment</a>
+      <a href="{{ url('tbpro.send') }}">Send</a>
     </div>
   </div>
 
+  {% include 'includes/base/moz-footer-block.html' %}
 </footer>
