--- a/sites/www.thunderbird.net/includes/base/footer.html
+++ b/sites/www.thunderbird.net/includes/base/footer.html
@@ -43,45 +43,11 @@
         </ul>
       </div>
     </div>
-    <div class="mzla">
-      <a href="https://mozilla.org" class="mozilla-logo">
-        {{ svg('Mozilla_Logo') }}
-      </a>
-      <div class="legal-links">
-        <a href="{{ url('thunderbird.privacy') }}" data-link-type="footer"
-        data-link-name="Privacy">{{ _('Privacy Policy') }}</a>
-        <a href="{{ url('privacy.notices.websites') }}" data-link-type="footer"
-          data-link-name="Cookies">{{ _('Cookies') }}</a>
-        <a href="{{ url('legal.index') }}" data-link-type="footer"
-          data-link-name="Legal">{{ _('Legal') }}</a>
-        <a href="{{ url('legal.infringement') }}" data-link-type="footer"
-          data-link-name="infringement">{{ _('Send DMCA Notice') }}</a>
-        <a href="{{ url('legal.fraud-report') }}" data-link-type="footer"
-          data-link-name="Report Trademark Misuse">{{ _('Report Fraud') }}</a>
-        <a href="{{ url('guidelines') }}" data-link-type="footer"
-          data-link-name="guidelines">{{ _('Participation Guidelines') }}</a>
-      </div>
-      <p>
-        {% trans trimmed current_year=NOW.year %}
-        <small>
-          Thunderbird is part of <a href="https://blog.thunderbird.net/2020/01/thunderbirds-new-home/">MZLA Technologies Corporation</a>, a wholly owned subsidiary of Mozilla Foundation.
-          Portions of this content are ©1998–{{ current_year }} by individual contributors. Content available under a
-          <a href="https://www.mozilla.org/foundation/licensing/website-content/">Creative Commons license</a>.
-        </small>
-        {% endtrans %}
-      </p>
-      <div class="legal-links">
-        <small>
-          <a href="{{ url('contribute') }}" data-link-type="footer" data-link-name="Contribute to this site">{{ _('Contribute to this site') }}</a>
-        </small>
-        {% if LANG != 'en-US' %}
-        <small>
-          <a href="https://pontoon.mozilla.org/{{ LANG }}/thunderbirdnet/LC_MESSAGES/messages.po/" data-link-type="footer" data-link-name="Translate this site">{{ _('Translate this site') }}</a></small>
-        {% endif %}
-      </div>
-    </div>
     <aside>
       {% include 'includes/lang_switcher.html' %}
     </aside>
+    <div class="moz-footer-border">
+      {% include 'includes/base/moz-footer-block.html' %}
+    </div>
   </div>
 </footer>
